--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uppy/core": "^4.3.0",
+    "@uppy/dashboard": "^4.1.3",
+    "@uppy/drag-drop": "^4.0.5",
+    "@uppy/progress-bar": "^4.0.2",
+    "@uppy/status-bar": "^4.0.5",
+    "@uppy/vue": "^2.0.3",
+    "@uppy/webcam": "^4.0.3",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
